--- a/main.css
+++ b/main.css
@@ -4,23 +4,117 @@
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 600px) {
-    body {
-        font-size: 14px;
-    }
+header {
+    background-color: #24252a;
+    box-shadow: 0px 3px 10px #464646;
 }
 
-/* Para telas médias */
-@media screen and (min-width: 601px) and (max-width: 900px) {
-    body {
-        font-size: 15px;
-    }
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 6rem;
+    align-items: center;
 }
 
-/* Para telas grandes */
-@media screen and (min-width: 901px) {
-    body {
-        font-size: 16px;
-    }
+.logo {
+    display: flex;
+    align-items: center;
 }
 
+.logo h1 {
+    color: white;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list ul  {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.nav-item {
+    margin: 0 15px;
+}
+
+.nav-link {
+    text-decoration: none;
+    font-size: 1.15rem;
+    color: white;
+    font-weight: bold;
+}
+
+.login-button button {
+    border: none;
+    background-color: #0187a7;
+    padding: 10px 15px;
+    border-radius: 20px;
+}
+
+.login-button button a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+.mobile-menu-icon {
+    display: none;
+}
+
+.mobile-menu {
+    display: none;
+}
+
+
+@media screen and (max-width: 730px) {
+    .nav-bar {
+        padding: 1.5rem 4rem;
+    }
+
+    .nav-item {
+        display: none;
+    }
+
+    .login-button {
+        display: none;
+    }
+
+    .mobile-menu-icon {
+        display: block;
+    }
+
+    .mobile-menu-icon button {
+        display: block;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+
+    .mobile-menu ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 1rem;
+    }
+
+    .mobile-menu .nav-item {
+        display: block;
+        padding-top: 1.2rem;
+    }
+
+    .mobile-menu .login-button {
+        display: block;
+        padding: 1rem 2rem;
+    }
+
+    .mobile-menu .login-button button {
+        width: 100%;
+    }
+
+    .open {
+        display: block;
+    }    
+}
