--- a/main.css
+++ b/main.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+
+/* estilização do header */
+
 header {
     background-color: #24252a;
     box-shadow: 0px 3px 10px #464646;
@@ -68,6 +71,7 @@ header {
     display: none;
 }
 
+/* media queries */
 
 @media screen and (max-width: 730px) {
     .nav-bar {
