--- a/main.css
+++ b/main.css
@@ -4,12 +4,28 @@
     box-sizing: border-box;
 }
 
+header,
+section h2,
+section h3,
+form button,
+.login-button a {
+    font-family: Bebas Neue, sans-serif;
+}
 
+body, input, textarea {
+    font-family: Roboto, sans-serif;
+}
+
+body {
+    background-image: url(./images/bg_image.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+}
 /* estilização do header */
 
 header {
-    background-color: #24252a;
-    box-shadow: 0px 3px 10px #464646;
+    margin-bottom: 200px;
 }
 
 .nav-bar {
@@ -26,6 +42,7 @@ header {
 
 .logo h1 {
     color: white;
+    font-size: 45px;
 }
 
 .nav-list {
@@ -37,6 +54,7 @@ header {
     display: flex;
     justify-content: center;
     list-style: none;
+    margin-right: 130px;
 }
 
 .nav-item {
@@ -61,6 +79,7 @@ header {
     text-decoration: none;
     color: white;
     font-weight: bold;
+    font-size: 20px;
 }
 
 .mobile-menu-icon {
@@ -71,9 +90,128 @@ header {
     display: none;
 }
 
+
+/* section profile index */
+
+#profile-apresentation .container {
+    display: block;
+    align-items: center;
+    text-align: center;
+}
+
+.container .profile-title h2 {
+    margin-bottom: 20px;
+    font-size: 80px;
+}
+
+.container .profile-photo {
+    margin-bottom: 20px
+}
+
+#profile-apresentation {
+    height: 100vh;
+    margin-bottom: 50px;
+}
+
+/* section biography */
+
+#biography {
+    padding: 30px 200px;
+    height: 100vh;
+    font-size: px;
+    text-align: justify;
+}
+
+.container h2 {
+    margin-bottom: 50px;
+    font-size: 30px;
+}
+
+.container p {
+    font-size: larger;
+}
+
+/* section contacts */
+
+#contact .container {
+    display: flex;
+    padding: 0 200px;
+    height: 100vh;
+}
+
+.social-links img {
+    height:35px;
+}
+
+.social-links li {
+    display: inline;
+    margin-right: 8px;
+}
+
+.social-links li a {
+    text-decoration: none;
+}
+
+#contact .container {
+    display: block;
+}
+
+.contact-methods {
+    display: flex;
+    justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea {
+    resize: none;
+    height: 180px;
+}
+
+section h3 {
+    margin-bottom: 25px;
+    font-size: 25px;
+}
+
+form button {
+    background-color: rgb(50, 49, 49);
+    color: aliceblue;
+    font-size: 18px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: rgb(105, 100, 105);
+}
+
+input:focus, textarea:focus {
+    outline-color: rgb(110, 106, 114);
+}
+
+/* footer */ 
+
+.fixarRodape {
+    bottom: 0;
+    position:relative;
+    width: 100%;
+    background-color: rgb(59, 58, 58);
+    color: rgb(255, 255, 255);
+    padding: 16px 50PX;
+}
+
+
 /* media queries */
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 700px) {
     .nav-bar {
         padding: 1.5rem 4rem;
     }
@@ -120,5 +258,42 @@ header {
 
     .open {
         display: block;
-    }    
+    } 
+}
+
+@media screen and (max-width: 1700px) {
+
+    body {
+        background-size: cover;
+    }
+
+    header {
+        margin-bottom: 20px;
+    }
+    
+
+    .container .profile-photo {
+        max-height: 250px;
+    }
+
+
+    #profile-apresentation {
+        margin-bottom: 20px;
+    }
+
+    .container .profile-title h2 {
+        font-size: 30px;
+    }
+
+    .container .profile-subtitle h3 {
+        font-size: 15px;
+    }
+
+    #biography {
+        margin-bottom: 200px;
+    }
+
+    .contact-methods {
+        display: block;
+    }
 }
