--- a/main.css
+++ b/main.css
@@ -202,6 +202,14 @@ input:focus, textarea:focus {
     outline-color: rgb(110, 106, 114);
 }
 
+.logo-wpp img {
+    position: fixed;
+    bottom: 20px;
+    height: 50px;
+    margin-left: 850px;
+    margin-bottom: 50px;
+}
+
 /* footer */ 
 
 .fixarRodape {
@@ -210,7 +218,7 @@ input:focus, textarea:focus {
     width: 100%;
     background-color: rgb(59, 58, 58);
     color: rgb(255, 255, 255);
-    padding: 16px 50PX;
+    padding: 10px 30PX;
 }
 
 
@@ -314,5 +322,9 @@ input:focus, textarea:focus {
 
     #contact {
         margin-bottom: 50px;
+    }
+
+    .nav-list li {
+        margin-left: 70px;
     }
 }
