--- a/main.css
+++ b/main.css
@@ -206,7 +206,7 @@ input:focus, textarea:focus {
     position: fixed;
     bottom: 20px;
     height: 50px;
-    margin-left: 850px;
+    margin-left:73.0rem;
     margin-bottom: 50px;
 }
 
@@ -326,5 +326,13 @@ input:focus, textarea:focus {
 
     .nav-list li {
         margin-left: 70px;
+    }
+
+     .logo-wpp img {
+        position: fixed;
+        bottom: 20px;
+        height: 50px;
+        margin-left:53.0rem;
+        margin-bottom: 50px;
     }
 }
