--- a/main.css
+++ b/main.css
@@ -202,12 +202,24 @@ input:focus, textarea:focus {
     outline-color: rgb(110, 106, 114);
 }
 
-.logo-wpp img {
+.logo-wpp .whatsapp-link {
     position: fixed;
-    bottom: 20px;
-    height: 50px;
-    margin-left:73.0rem;
-    margin-bottom: 50px;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 1px  1px 2px #888;
+    z-index: 1000;
+    margin-bottom: 30px;
+}
+
+.fa-whatsapp {
+    margin-block-start: 16px;
 }
 
 /* footer */ 
@@ -274,7 +286,7 @@ input:focus, textarea:focus {
     } 
 }
 
-@media screen and (max-width: 1700px) {
+@media screen and (max-width: 17000px) {
 
     body {
         background-size: cover;
@@ -326,13 +338,5 @@ input:focus, textarea:focus {
 
     .nav-list li {
         margin-left: 70px;
-    }
-
-     .logo-wpp img {
-        position: fixed;
-        bottom: 20px;
-        height: 50px;
-        margin-left:53.0rem;
-        margin-bottom: 50px;
     }
 }
