--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body {
 /* estilização do header */
 
 header {
-    margin-bottom: 200px;
+    margin-bottom: 50.0rem;
 }
 
 .nav-bar {
@@ -109,6 +109,7 @@ header {
 }
 
 #profile-apresentation {
+    padding: 150px 0; 
     height: 100vh;
     margin-bottom: 50px;
 }
@@ -134,6 +135,7 @@ header {
 /* section contacts */
 
 #contact .container {
+    padding: 50px;
     display: flex;
     padding: 0 200px;
     height: 100vh;
@@ -156,12 +158,7 @@ header {
     display: block;
 }
 
-.contact-methods-1 {
-    display: flex;
-    justify-content: space-between;
-}
-
-.contact-methods-2 {
+.contact-methods {
     display: flex;
     justify-content: space-between;
 }
@@ -186,7 +183,7 @@ section h3 {
 }
 
 form button {
-    background-color: rgb(50, 49, 49);
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
     font-size: 18px;
     border-radius: 5px;
@@ -317,26 +314,22 @@ input:focus, textarea:focus {
     #biography {
         margin-bottom: 200px;
     }
-
-    .contact-methods-2 {
-        display: inline-block;
-        padding: 0 40px;
-    } 
     
     .social-links {
         margin-bottom: 60px;
     }
 
-    .contact-methods-2 p {
-        font-size: 15px;
-        text-align: justify;
-    }
-
     #contact {
         margin-bottom: 50px;
+        max-height: 100vh;
     }
 
     .nav-list li {
         margin-left: 70px;
+    }
+
+    .contact-methods {
+        display: flex;
+        text-align: cneter;
     }
 }
