--- a/main.css
+++ b/main.css
@@ -7,8 +7,7 @@
 header,
 section h2,
 section h3,
-form button,
-.login-button a {
+form button {
     font-family: Bebas Neue, sans-serif;
 }
 
@@ -16,16 +15,10 @@ body, input, textarea {
     font-family: Roboto, sans-serif;
 }
 
-body {
-    background-image: url(./images/bg_image.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-}
 /* estilização do header */
 
 header {
-    margin-bottom: 200px;
+    background-color: black;
 }
 
 .nav-bar {
@@ -41,7 +34,7 @@ header {
 }
 
 .logo h1 {
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 45px;
 }
 
@@ -64,7 +57,7 @@ header {
 .nav-link {
     text-decoration: none;
     font-size: 30px;
-    color: white;
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
 
@@ -91,68 +84,117 @@ header {
 }
 
 
-/* section profile index */
+/* container configuration */
 
-#profile-apresentation .container {
-    display: block;
+.container , 
+.container-index,
+.container-wrapper {
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: space-between;
 }
 
-.container .profile-title h2 {
-    margin-bottom: 20px;
-    font-size: 80px;
-}
+/* index section */ 
 
-.container .profile-photo {
-    margin-bottom: 20px
-}
-
-#profile-apresentation {
-    padding: 150px 0; 
+#section-index {
     height: 100vh;
-    margin-bottom: 50px;
+}
+
+#section-index {
+    background-image: url(./images/bg_image.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#section-index {
+    display: flex; /* Ativa o Flexbox */
+    justify-content: center; /* Alinha horizontalmente no centro */
+    align-items: center; /* Alinha verticalmente no centro */
+    height: 100vh; /* Garante que a seção ocupe toda a altura da tela */
+}
+
+.index-title h1 {
+    font-size: 90px;
+    margin-bottom: 40px;
+}
+
+.index-title h2 {
+    font-weight: bold;
+    font-size: 35px;
+}
+
+.container-index {
+ color: rgb(255, 255, 255);
+ justify-content: center;
 }
 
 /* section biography */
 
-
-form input,
-form textarea,
-form button {
-    display: block;
-    width: 320px;
-    margin-bottom: 8px;
-    padding: 8px;
+#biography {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vh;
 }
 
-form textarea {
-    resize: none;
-    height: 180px;
+#biography .container{
+    text-align: justify;
 }
 
-section h3 {
-    margin-bottom: 25px;
-    font-size: 25px;
+#biography .container h2 {
+    margin-bottom: 70px;
+    font-size: 60px;
+    color: rgb(81, 99, 212);
 }
 
-form button {
-    background-color: rgb(0, 0, 0);
-    color: aliceblue;
-    font-size: 18px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
+#biography .container p {
+    font-weight: bold;
+    font-size: 20px;
 }
 
-form button:hover {
-    background-color: rgb(105, 100, 105);
+/* sectino slider */
+
+.container-wrapper .wrapper {
+    width: 50vw;
+    height: 40vh;
+    margin: 5rem auto;
+    box-shadow: 10px 10px 20px black;
+    overflow: hidden;
+    margin left: 60px;
 }
 
-input:focus, textarea:focus {
-    outline-color: rgb(110, 106, 114);
+.container-wrapper .wrapper-holder {
+    display: grid;
+    grid-template-columns: repeat(4, 100%);
+    height: 100%;
+    width: 100%;
+    animation: slider 12s ease-in-out infinite alternate;
+} 
+
+.container-wrapper #slider-img-1 {
+    background-image: url(./images/lewlara_image.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
+.container-wrapper #slider-img-2 {
+    background-image: url(./images/wk_image.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+@keyframes slider {
+    0%{transform: translateX(0);}
+    100%{transform: translateX(-100%);}
+   
+}
+
+/* whatsapp button style */
 .logo-wpp .whatsapp-link {
     position: fixed;
     width: 60px;
@@ -235,4 +277,10 @@ input:focus, textarea:focus {
     .open {
         display: block;
     } 
+}
+
+/* waiting */ 
+
+#wpp-area {
+    display: none;
 }
