--- a/main.css
+++ b/main.css
@@ -21,6 +21,10 @@ header {
     background-color: black;
 }
 
+.logo a {
+    text-decoration: none;
+}
+
 .nav-bar {
     display: flex;
     justify-content: space-between;
