--- a/media_queries.css
+++ b/media_queries.css
@@ -103,6 +103,11 @@
         background-repeat: no-repeat; /* Não repete a imagem */
         background-size: cover; /* Cobre todo o espaço */
     }
+
+    .logo a h1 {
+        font-size: 24px;
+    }
+    
 }
 
 
