--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* -------------------------------------- INDEX PAGE ------------------------------------------ */ 
 
 header,
 section h2,
@@ -96,7 +97,9 @@ header {
 
 .container , 
 .container-index,
-.container-wrapper {
+.container-wrapper,
+.container-lewlara,
+.container-wk {
     max-width: 1280px;
     width: 100%;
     margin: 0 auto;
@@ -231,4 +234,57 @@ header {
     background-color: rgb(59, 58, 58);
     color: rgb(255, 255, 255);
     padding: 10px 30PX;
+}
+
+/* -------------------------------------- JOB PAGE ------------------------------------------ */ 
+
+.job-photo {
+    max-height:400px;
+}
+
+.container {
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+#lewlara-section, .container-lewlara, #wiedenkennedy-section, .cotainer-wk {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 40;
+}
+
+#lewlara-section {
+    background-color: #ffd25a;
+    backdrop-filter: blur(30px);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-clip:initial;
+    height: 50vh;
+
+
+}
+
+#wiedenkennedy-section {
+    color: white;
+    background-color: black;
+    min-height: 50vh;
+}
+
+.job-1-index,
+.job-2-index {
+    margin-right: 40px;
+}
+
+.job-1-description h1,
+.job-2-description h1 {
+    margin-bottom: 50px;
+    font-size: 40px;
+}
+
+.job-1-description p,
+.job-2-description p {
+    text-align: justify;
+    font-weight: bold;
 }
