--- a/media_queries.css
+++ b/media_queries.css
@@ -108,6 +108,16 @@
         font-size: 24px;
     }
     
+    .container-lewlara,
+    .container-wk {
+        display: block;
+    }
+
+    .container-lewlara,
+    .container-wk {
+        margin: 10px 10px 9px;
+    }
+
 }
 
 
@@ -200,5 +210,11 @@
         font-size: 18px; /* Ajusta o tamanho da fonte */
     }
 
+    #lewlara-section {
+        height: 100vh;
+    }
 
+    #wiedenkennedy-section {
+        height: 100vh;
+    }
 }
