--- a/main.css
+++ b/main.css
@@ -209,7 +209,7 @@ header {
 }
 
 /* whatsapp button style */
-.logo-wpp .whatsapp-link {
+.whatsapp-link {
     position: fixed;
     width: 60px;
     height: 60px;
@@ -292,3 +292,82 @@ header {
     text-align: justify;
     font-weight: bold;
 }
+
+/* -------------------------------------- CONTACTS PAGE ------------------------------------------ */ 
+
+.social-links img {
+    height:35px;
+}
+
+.social-links li {
+    display: inline;
+    margin-right: 8px;
+}
+
+.social-links li a {
+    text-decoration: none;
+}
+
+#contact .container {
+    display: block;
+}
+
+.contact-methods {
+    display: flex;
+    justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea {
+    resize: none;
+    height: 180px;
+}
+
+section h3 {
+    margin-bottom: 25px;
+    font-size: 25px;
+}
+
+form button {
+    background-color: rgb(0, 0, 0);
+    color: aliceblue;
+    font-size: 18px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: rgb(105, 100, 105);
+}
+
+input:focus, textarea:focus {
+    outline-color: rgb(110, 106, 114);
+}
+
+#contact {
+    background-image: url(./images/bg_image.png);
+    display: flex;                  
+    justify-content: center;         
+    align-items: center;       
+    height: 100vh;
+    color: white;
+}
+
+#contact h2 {
+    margin-bottom: 50px;
+    font-size: 65px;
+}
+
+#contact h3 {
+    font-size: 30px;
+}
+
