--- a/media_queries.css
+++ b/media_queries.css
@@ -118,6 +118,23 @@
         margin: 10px 10px 9px;
     }
 
+    .contact-methods {  
+        display: block;
+        margin-left: 30px;
+    }
+
+    form {
+        margin-bottom: 80px;
+    }
+
+    .social-links {
+        margin-bottom: 80px;
+    }
+
+    .social-links a img {  
+        width: 60px;
+        height: 60px;
+    }
 }
 
 
